--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -53,3 +53,14 @@
   font-size: 14px;
   font-weight: 400;
 }
+.shareBtn {
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: rgb(49, 136, 9);
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+  margin-right: 20px;
+  cursor: pointer;
+}
