--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -56,6 +56,15 @@
   margin-right: 10px;
   cursor: pointer;
 }
+
+.rotateimg180 {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
 .postLikeCounter {
   font-size: 14px;
 }
